<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:text="@string/central_tendency_title"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/instruction_here"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.189"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/data"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/instruction_here_input"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.672"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/calculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="#03A9F4"
            android:shadowColor="#79FFFFFF"
            android:text="@string/btn_calculate"
            android:textColor="#5E35B1"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/data" />

        <android.support.v7.widget.CardView
            android:id="@+id/card_mean"
            style="@style/card_style_result"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:contentPadding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.016"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculate">

            <TextView
                android:id="@+id/mean_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_mean"
                android:textStyle="bold" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_median"
            style="@style/card_style_result"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:contentPadding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.393"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_mean">

            <TextView
                android:id="@+id/median_result"
                android:text="@string/card_median"
                style="@style/text_card_style" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_mode"
            style="@style/card_style_result"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:contentPadding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_median">

            <TextView
                android:id="@+id/mode_result"
                style="@style/text_card_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_mode" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_standardDeviation"
            style="@style/card_style_result"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:contentPadding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_mode">

            <TextView
                android:id="@+id/sd_result"
                style="@style/text_card_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_sd" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/card_style_result"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:contentPadding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_standardDeviation">

            <TextView
                android:id="@+id/variance_result"
                style="@style/text_card_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_variance" />
        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>
</layout>